force-app/main/default/objects/msf_AutomatedProcessErrors__c/msf_AutomatedProcessErrors__c.object-meta.xml
<CustomObject>
    <label>Automated Process Error</label>
    <nameField>
        <displayFormat>ERROR_{YYYY}-{MM}-{DD}_{0000000000}</displayFormat>
        <label>Identificador de error</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automated Process Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>