force-app/main/default/objects/msf_AutomatedProcessErrors__c/fields/msf_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>msf_ErrorMessage__c</fullName>
    <label>Mensaje de error</label>
    <type>TextArea</type>
</CustomField>