force-app/main/default/objects/msf_AutomatedProcessErrors__c/fields/msf_FieldsErrors__c.field-meta.xml
<CustomField>
    <fullName>msf_FieldsErrors__c</fullName>
    <label>Campos con errores</label>
    <length>255</length>
    <type>Text</type>
</CustomField>