force-app/main/default/objects/msf_AutomatedProcessErrors__c/fields/msf_Process__c.field-meta.xml
<CustomField>
    <fullName>msf_Process__c</fullName>
    <label>Proceso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>