force-app/main/default/objects/msf_AutomatedProcessErrors__c/fields/msf_StatusCode__c.field-meta.xml
<CustomField>
    <fullName>msf_StatusCode__c</fullName>
    <label>Código de error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>