force-app/main/default/objects/msf_AutomatedProcessErrors__c/listViews/MSF_All.listView-meta.xml
<ListView>
    <fullName>MSF_All</fullName>
    <columns>NAME</columns>
    <columns>msf_Process__c</columns>
    <columns>msf_StatusCode__c</columns>
    <columns>msf_ErrorMessage__c</columns>
    <columns>msf_FieldsErrors__c</columns>
    <columns>msf_RecordId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>MSF - Todos</label>
</ListView>